# dotfiles

./: .gitignore  .stowrc  AGENTS.md  CLAUDE.md  README.md  niimbot-starken-printer-launchd.sh  niimbot-vial-printer-launchd.sh  setup.sh  takopi-launchd.sh  telegram-label-printer-launchd.sh
.claude/: settings.json
.opencode/: package.json
aerospace/: aerospace.toml  ghostty-workspace-balance.sh  startup-workspace-sweep.sh  workspace-25-50-25.sh  workspace-jump.sh  workspace-master.sh  workspace-reset.sh  zoom-popup-sweeper.sh
aichat/: config.yaml
amp/: AGENTS.md
amp/scripts/: amp-ralph
automator-services/: scale-pdf.swift
blocky/: config.yml
borders/: bordersrc
claude/: CLAUDE.md
codex/: config.toml
colima/default/: colima.yaml
docs/: OPENCODE-COMPLETION-WORKFLOW.md  QUICK-SETUP.md  TAKOPI.md
factory/droids/: global-rules.md
ghostty/: config
hammerspoon/: init.lua
karabiner/: karabiner.json
launchagents/: com.klaudioz.niimbot-starken-printer.plist  com.klaudioz.niimbot-vial-printer.plist  com.klaudioz.telegram-label-printer.plist
lazygit/: config.yml
niimbot-starken-printer/: starken_label_printer.py
niimbot-vial-printer/: main.py  pyproject.toml  vial_label_printer.py
nix-darwin/: flake.nix  home.nix
nushell/: config.nu  env.nu
opencode/: AGENTS.md  completion-workflow-start.sh  completion-workflow.sh  oh-my-opencode.json  opencode.json  secrets.nu.example  secrets.zsh.example
sketchybar/: sketchybarrc
telegram-label-printer/: label_printer.py
vscode/: settings.json
zsh/: .zshenv  .zshrc
(+21 files in other folders)
